syntax = "proto3";

option go_package = "github.com/SatisfactoryServerManager/ssmcloud-resources/proto/generated/models";
import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string external_id = 2;
  string email = 3;
  string username = 4;

  string profile_image_url = 5;

  repeated UserAPIKey api_keys = 6;

  google.protobuf.Timestamp last_active = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message UserAPIKey {
  string short_key = 1;
  string key = 2;
}

message Account {
  string id = 1;
  string account_name = 2;
  string join_code = 3;

  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;

}